fix(alerts): humanize ALL-CAPS text, suppress duplicate message, show issued time

--- a/src/lib/translations/en.json
+++ b/src/lib/translations/en.json
@@ -31,7 +31,8 @@
   },
   "serviceAlert": {
     "serviceAlert": "Service Alert",
-    "hideServiceAlert": "Hide service alert"
+    "hideServiceAlert": "Hide service alert",
+    "issuedAt": "Issued at {{time}}"
   },
   "schedule": {
     "southboundSchedule": "Southbound Schedule",
