feat(service-alerts): redesign as collapsible card section

--- a/src/lib/translations/en.json
+++ b/src/lib/translations/en.json
@@ -30,6 +30,7 @@
     "noTrainsFound": "No trains found for this route."
   },
   "serviceAlert": {
+    "sectionTitle": "Service Alerts",
     "serviceAlert": "Show service alerts",
     "hideServiceAlert": "Hide service alert",
     "issuedAt": "Issued at {{time}}"
