feat(alerts): dismissible service alerts with subtle dismissed state

--- a/src/lib/translations/en.json
+++ b/src/lib/translations/en.json
@@ -31,11 +31,11 @@
   },
   "serviceAlert": {
     "sectionTitle": "Service Alerts",
-    "serviceAlert_one": "Show service alert",
-    "serviceAlert_other": "Show service alerts",
-    "hideServiceAlert_one": "Hide service alert",
-    "hideServiceAlert_other": "Hide service alerts",
-    "issuedAt": "Issued at {{time}}"
+    "issuedAt": "Issued at {{time}}",
+    "dismiss": "Dismiss alert",
+    "dismissedNotice_one": "{{count}} dismissed service alert ·",
+    "dismissedNotice_other": "{{count}} dismissed service alerts ·",
+    "restore": "restore"
   },
   "schedule": {
     "southboundSchedule": "Southbound Schedule",
