feat(legal): add branded support and privacy pages
- add hosted support and privacy pages under public/

- share legal header/style via legal-header.js and legal.css

- add support/privacy links in footer with en/es translations

- document support contact link in README

--- a/src/lib/translations/en.json
+++ b/src/lib/translations/en.json
@@ -62,7 +62,10 @@
     "alertSignupText": "Receive service alerts by texting",
     "alertSignupTo": "to",
     "alertSignupOr": "or",
-    "alertSignupLink": "sign up online"
+    "alertSignupLink": "sign up online",
+    "linksIntro": "Help and legal:",
+    "supportLink": "Support",
+    "privacyHostedLink": "Privacy Policy"
   },
   "notifications": {
     "title": "Service Alerts",
